# Examples_of_RAG_Agents_with_LangGraph

./: .gitignore  README.md  pyproject.toml
1_AgenticRAG_with_LangGraph_Step-by-Step/: agente_langgraph.py  ingerir_dados.py
1_AgenticRAG_with_LangGraph_Step-by-Step/Scraping_For_ri-vix/: ri_vix_scraping.py
2_RAG_AI_Agent_using_LangGraph/: .gitignore  CONCEPTS.md  README.md  config.py  env.example  ingest_data.py  rag_agent.py  setup.sh
2_RAG_AI_Agent_using_LangGraph/data/: exemplo.txt
2_RAG_AI_Agent_using_LangGraph/notebook/: RAG_AI_Agent_using_LangGraph.ipynb
