[project]
name = "projetos-langgraph"
version = "0.1.0"
description = "Aqui vou apresentar vários exemplos usando LangGraph para construir um sistema RAG"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.3.0",
    "chromium>=0.0.0",
    "cookiecutter>=2.6.0",
    "crawl4ai>=0.7.6",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.2.0",
    "markdown>=3.7",
    "openai>=2.6.1",
    "playwright>=1.55.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "tavily-python>=0.5.0",
    "unstructured>=0.18.15",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
